# pyradiomics

./: .circleci-matrix.yml  .codespellignore  .copier-answers.yml  .dockerignore  .editorconfig  .flake8  .git-blame-ignore-revs  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CHANGES.rst  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTING.rst  Dockerfile  Dockerfile.notebook  Dockerfile.ubuntu  LICENSE.txt  MANIFEST.in  README.md  appveyor.yml  circle.yml  noxfile.py  pyproject.toml  requirements-dev.txt  requirements.txt  scikit-ci.yml  setup.cfg  setup.py  versioneer.py
.circleci/: config.yml
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature-extraction-question.md
.github/pypa_cibuildwheel_py310/: action.yml
.github/workflows/: cd.yml  ci.yml
XH_Texture_Analysis/: 2D_Test.py  Features.xlsx  MyTest.py  Texture_Analysis_Abood.py
XH_Texture_Analysis/Settings/: Params.yaml
conda/: bld.bat  build.sh  configure_conda.bat  configure_conda.sh  meta.yaml
data/: AdditionalBaselineFeatures.csv  MatlabBaselineFeatures.csv  MatlabFeatures.csv  README.md  README.txt  TestPatient1_BreastMRI-Pre_labelMap-subvolume.nrrd  TestPatient1_BreastMRI-Pre_labelMap.nrrd  brain1_image.nrrd  brain2_image.nrrd  brain2_label.nrrd  breast1_image.nrrd  lung1_label.nrrd  lung2_label.nrrd  paramSchema.yaml  prostate_phantom_label-subvolume.nrrd  prostate_phantom_subvolume.nrrd  schemaFuncs.py  test-image_37x37x37.nrrd  test-image_64x64x64.nrrd  test-mask_37x37x37.nrrd  test-mask_64x64x64.nrrd
data/TCGA-02-0003_BrainMRI/: AXIAL-T1-POST-GD_TCGA-02-0003_TCGA-02-0003_PREOP_SCAN13_FSL-Clustered-labelMap_binarized_labelMap.nrrd
data/baseline/: baseline_firstorder.csv  baseline_glcm.csv  baseline_gldm.csv  baseline_gldzm.csv  baseline_glrlm.csv  baseline_glszm.csv  baseline_ngtdm.csv  baseline_shape.csv  baseline_shape2D.csv  brain1_glcm.npy  brain1_gldm.npy  brain1_glrlm.npy  brain1_glszm.npy  brain1_ngtdm.npy  brain2_glcm.npy  brain2_gldm.npy  brain2_glrlm.npy  brain2_glszm.npy  brain2_ngtdm.npy  breast1_glcm.npy  breast1_gldm.npy  breast1_glrlm.npy  breast1_glszm.npy  breast1_ngtdm.npy  lung1_glcm.npy  lung1_gldm.npy  lung1_glrlm.npy  lung1_glszm.npy  lung1_ngtdm.npy  lung2_glcm.npy  lung2_gldm.npy  lung2_glrlm.npy  lung2_glszm.npy  lung2_ngtdm.npy  wavelet.npy
data/mapping/: baseline2pyradiomics_featureClasses.txt  baseline2pyradiomics_firstorder.txt  baseline2pyradiomics_glcm.txt  baseline2pyradiomics_gldm.txt  baseline2pyradiomics_gldzm.txt  baseline2pyradiomics_glrlm.txt  baseline2pyradiomics_glszm.txt  baseline2pyradiomics_shape.txt  baseline_firstorder.txt  baseline_glcm.txt  baseline_gldzm.txt  baseline_glrlm.txt  baseline_glszm.txt  baseline_shape.txt  matlab2pyradiomics_firstorder.txt  matlab2pyradiomics_glcm.txt  matlab2pyradiomics_glszm.txt  matlab2pyradiomics_rlgl.txt  matlab2pyradiomics_shape.txt  matlab_firstorder.txt  matlab_glcm.txt  matlab_glszm.txt  matlab_rlgl.txt  matlab_shape.txt  pyradiomics_firstorder.txt  pyradiomics_glcm.txt  pyradiomics_gldm.txt  pyradiomics_glrlm.txt  pyradiomics_glszm.txt  pyradiomics_ngtdm.txt  pyradiomics_shape.txt
docker/cli/: Dockerfile
docker/docker-jupyter/: Dockerfile
docs/: .buildinfo  Makefile  conf.py  customization.rst  developers.rst  faq.rst  features.rst  index.rst  installation.rst  labs.rst  make.bat  modules.rst  radiomics.rst  removedfeatures.rst  usage.rst
docs/.doctrees/: index.doctree
examples/: batchProcessingWithPandas.py  batchprocessing.py  batchprocessing_parallel.py  helloFeatureClass.py  helloRadiomics.py  helloRadiomicsWithSettings.py  helloResampling.py  helloVoxel.py  testCases.csv
examples/Notebooks/: PyRadiomics Example.ipynb  helloFeatureClass.ipynb  helloRadiomics.ipynb
examples/batchExamples/: batchProcessingPandas.py  batchprocessing.py
examples/exampleModels/: exampleModel.yaml
examples/exampleSettings/: Full_shape_params.yaml  MR_2D_extraction.yaml  Params.yaml  exampleCT.yaml  exampleMR_3mm.yaml  exampleMR_5mm.yaml  exampleMR_NoResampling.yaml  exampleVoxel.yaml  (+1 more)
hooks/: build
labs/: pyradiomics-dcm.py
log_messages/: log_pyraimgae.txt  log_sandpack_16bit_b10_w3.txt  log_sandpack_16bit_b1_w3.txt  log_sandpack_16bit_b2000.txt  log_sandpack_16bit_b25_try2.txt  log_sandpack_16bit_b25_w10.txt  log_sandpack_16bit_b25_w20.txt  log_sandpack_16bit_b25_w3.txt  log_sandpack_16bit_b3_w3.txt  log_sandpack_16bit_b50.txt  log_sandpack_6bit_b1.txt  log_sandpack_6bit_b2.txt  log_sandpack_8bit_b10.txt  log_sandpack_8bit_b15.txt  log_sandpack_8bit_b20.txt  log_sandpack_8bit_b25.txt  log_sandpack_8bit_b5.txt  log_sandpack_b100.txt  log_sandpack_b1000.txt  log_sandpack_b150.txt  log_sandpack_b25.txt
notebooks/: FeatureVisualization.ipynb  FeatureVisualizationWithClustering.ipynb  FilteringEffects.ipynb  PyRadiomicsExample.ipynb  RadiomicsExample.ipynb  Test_Discretization.ipynb  glszm_sandpack_16bit_dc_b2000.csv  glszm_sandpack_16bit_dc_b50.csv  glszm_sandpack_8bit_dc_b15.csv  glszm_sandpack_8bit_dc_b20.csv  glszm_sandpack_8bit_dc_b25.csv  glszm_sandpack_8bit_dc_b5.csv  glszm_segmented_navajo_dc.csv  helloFeatureClass.ipynb  helloRadiomics.ipynb
notebooks_default/: FilteringEffects.ipynb  RadiomicsExample.ipynb  helloRadiomics.ipynb
radiomics/: __init__.py  _version.py  base.py  dwglcm.py  featureextractor.py  firstorder.py  generalinfo.py  glcm.py  gldm.py  gldzm.py  glrlm.py  glszm.py  imageoperations.py  laplacian.py  ngtdm.py  preprocessing.py  rlgl.py  shape.py  shape2D.py  signatures.py  wavelet.py
radiomics/src/: CMakeLists.txt  _cmatrices.c  _cshape.c  cmatrices.c  cmatrices.h  cshape.c  cshape.h
radiomics/src/cuda/: cshape.h
source/: helloRadiomics.py  setup.py
tests/: __init__.py  addTest.py  add_baseline.py  firstorderTest.py  glcmTest.py  rlglTest.py  shapeTest.py  testUtils.py  test_cmatrices.py  test_docstrings.py  test_exampleSettings.py  test_features.py  test_firstorder.py  test_glcm.py  test_glszm.py  test_matching.py  test_matrices.py  test_package.py  test_rlgl.py  test_shape.py  test_wavelet.py  test_wavelets.py
(+186 files in other folders)
