[build-system]
requires = ["setuptools>=61.0", "numpy", "versioneer[toml]"]
build-backend = "setuptools.build_meta"

[project]
name = "pyradiomics"
dynamic = ["version"]
authors = [
    { name = "PyRadiomics Community", email = "pyradiomics@googlegroups.com"}
]
description = "Radiomics features library for python"
readme = "README.md"
requires-python =">=3.5"
license = { file = "LICENSE.txt"}
keywords = [ "radiomics", "cancerimaging", "medicalresearch", "computationalimaging" ]
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Environment :: Console',
    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: BSD License',
    'Operating System :: OS Independent',
    'Programming Language :: C',
    'Programming Language :: Python :: 3.5',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Topic :: Scientific/Engineering :: Bio-Informatics'
]
dependencies = [
    "numpy",
    "SimpleITK",
    "PyWavelets",
    "pykwalify",
    "six"
]

[project.scripts]
pyradiomics = "radiomics.scripts.__init__:parse_args"

[project.urls]
"Homepage" = "https://github.com/AIM-Harvard/pyradiomics#readme"
"Radiomics.io" = "https://www.radiomics.io/"
"Documentation" = "https://pyradiomics.readthedocs.io/en/latest/index.html"
"Docker" = "https://hub.docker.com/r/radiomics/pyradiomics/"
"Github" = "https://github.com/AIM-Harvard/pyradiomics"

[tool.versioneer]
VCS = "git"
versionfile_source = "radiomics/_version.py"
versionfile_build = "radiomics/_version.py"
style = "pep440-post"
tag_prefix = ""
