[metadata]
description_file = README.md

[options]
install_requires =
    numpy
    SimpleITK
    PyWavelets
    pykwalify
    six
include_package_data=False

[options.packages.find]
include=radiomics*
exclude=radiomics.schemas

[options.package_data]
radiomics =
      schemas/paramSchema.yaml
      schemas/schemaFuncs.py

[versioneer]
VCS = git
versionfile_source = radiomics/_version.py
versionfile_build = radiomics/_version.py
style = pep440-post
tag_prefix = ''

